# compiler

./: README.md  ast.dot  create_expected.py  create_semantic_tests.py  debug_test.py  debug_tokens.py  debug_types.py  pyproject.toml  requirements.txt  setup.py
docs/: grammar.md
examples/: hello.src  simple.src
minicompiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: main.py
src/codegen/: register_allocator.py  stack_frame.py  test_runner.py  x86_generator.py
src/ir/: basic_block.py  control_flow.py  ir_generator.py  ir_instructions.py
src/lexer/: __init__.py  scanner.py  token.py  token_types.py
src/parser/: __init__.py  ast.py  grammar.txt  parser.py
src/semantic/: analyzer.py  errors.py  symbol_table.py  type_system.py
src/utils/: error_handler.py
tests/: test_runner.py
tests/codegen/: test_runner.py
tests/ir/: test_runner.py
tests/lexer/expected/: test_comments.txt  test_comments_nested.txt  test_empty_string.txt  test_identifiers.txt  test_identifiers_long.txt  test_invalid_char.txt  test_keywords.txt  test_keywords_all.txt  test_malformed_number.txt  test_mixed.txt  test_multiple_errors.txt  test_numbers.txt  test_numbers_edge.txt  test_operators.txt  test_strings.txt  test_unterminated_comment.txt  test_unterminated_string.txt  test_very_long_identifier.txt  test_whitespace.txt  сссссtest_operators_all.txt
tests/lexer/invalid/: test_invalid_char.src  test_malformed_number.src  test_multiple_errors.src  test_unterminated_comment.src  (+2 more)
tests/parser/: test_runner.py
tests/semantic/: test_runner.py
(+81 files in other folders)
