[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicompiler"
version = "0.2.0"
description = "MiniCompiler "
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
compiler = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]